Changed location information

--- a/index.html
+++ b/index.html
@@ -1,34 +1,23 @@
 ---
 layout: bootcamp
 root: .
-venue: Euphoric State University
-address: 123 College Street, Euphoria
-country: United-States
-humandate: Feb 17-18, 2020
+venue: University of Bergen
+address: Vilvite, Thorm&oslash;hlensgate 51, 5006 Bergen
+country: Norway
+humandate: April 23-24, 2014
 humantime: 9:00 am - 4:30 pm
-startdate: 2020-06-17
-enddate: 2020-06-18
-latlng: 41.7901128,-87.6007318
-registration: restricted
-instructor: ["Grace Hopper", "Alan Turing"]
-contact: admin@software-carpentry.org
+startdate: 2014-04-23
+enddate: 2014-04-24
+latlng: 60.3812811,5.3291539
+registration: open
+instructor: ["Lex Nederbragt", "Karin Lagesen", "David Fredman"]
+contact: david.fredman@uib.no
 ---
 <!--
     Edit the values in the parameter block above to be appropriate for your bootcamp.
     Please use three-letter month names for the 'humandate' field.
 -->
 
-<!-- Remove the block below. -->
-<div align="center">
-  <p><strong><em>
-      This page is a template for bootcamp home pages.
-      <br/>
-      Please see
-      <a href="https://github.com/swcarpentry/bc">https://github.com/swcarpentry/bc</a>
-      for instructions on how to create
-      a repository for your bootcamp.
-  </em></strong></p>
-</div>
 
 <!--
     This block includes the Eventbrite registration widget if 'eventbrite' has been set in the header.
