--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@ contact: david.fredman@uib.no
   <tr> <td>Monday</td>  <td>09:00</td>  <td>Introduction to task automation with the Unix shell</td> </tr>
   <tr> <td></td>        <td></td>       <td>Coffee will be served at 10:30.</td> </tr>
   <tr> <td></td>        <td>12:00</td>  <td>Lunch break</td> </tr>
-  <tr> <td></td>        <td>13:00</td>  <td>Building programs with Python</td> </tr>
+  <tr> <td></td>        <td>13:00</td>  <td>Version control with Git</td> </tr>
   <tr> <td></td>        <td></td>       <td>Coffee will be served at 14:30.</td> </tr>
   <tr> <td></td>        <td>16:00</td>  <td>Wrap-up</td> </tr>
-  <tr> <td>Tuesday</td> <td>09:00</td>  <td>Version control with Git</td> </tr>
+  <tr> <td>Tuesday</td> <td>09:00</td>  <td>Building programs with R</td> </tr>
   <tr> <td></td>        <td></td>       <td>Coffee will be served at 10:30.</td> </tr>
   <tr> <td></td>        <td>12:00</td>  <td>Lunch break</td> </tr>
-  <tr> <td></td>        <td>13:00</td>  <td>Managing data with SQL</td> </tr>
+  <tr> <td></td>        <td>13:00</td>  <td>Analysing data with R</td> </tr>
   <tr> <td></td>        <td></td>       <td>Coffee will be served at 14:30.</td> </tr>
   <tr> <td></td>        <td>15:00</td>  <td>Putting it all together</td> </tr>
   <tr> <td></td>        <td>16:00</td>  <td>Wrap-up</td> </tr>
