updated link to regitration page, and made schedule a little more flexible (finish with testing or more R/knitr)

--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@ contact: david.fredman@uib.no
 
 <!--
     This block includes the Eventbrite registration widget if 'eventbrite' has been set in the header.
--->
 {% if page.eventbrite %}
 <iframe src="http://www.eventbrite.com/tickets-external?eid={{page.eventbrite}}&ref=etckt" frameborder="0" width="100%" scrolling="auto"></iframe>
 {% endif %}
+-->
+
 
 <h2>General Information</h2>
 
@@ -36,6 +37,11 @@ contact: david.fredman@uib.no
   This two-day hands-on bootcamp will cover basic concepts and tools;
   participants will be encouraged to help one another
   and to apply what they have learned to their own research problems.
+</p>
+
+<p>
+<strong>Registration:</strong>
+The cost for the bootcamp is only 250 NOK. To register, please go to:  https://reg.app.uib.no/bootcamp
 </p>
 
 <!-- This block displays the instructors' names if they are available. -->
@@ -111,7 +117,7 @@ contact: david.fredman@uib.no
   <tr> <td>Tuesday</td> <td>09:00</td>  <td>Building programs with R</td> </tr>
   <tr> <td></td>        <td></td>       <td>Coffee will be served at 10:30.</td> </tr>
   <tr> <td></td>        <td>12:00</td>  <td>Lunch break</td> </tr>
-  <tr> <td></td>        <td>13:00</td>  <td>Analysing data with R</td> </tr>
+  <tr> <td></td>        <td>13:00</td>  <td>More on maintainable code and reproducible analysis</td> </tr>
   <tr> <td></td>        <td></td>       <td>Coffee will be served at 14:30.</td> </tr>
   <tr> <td></td>        <td>15:00</td>  <td>Putting it all together</td> </tr>
   <tr> <td></td>        <td>16:00</td>  <td>Wrap-up</td> </tr>
