added info on what the registration includes

--- a/index.html
+++ b/index.html
@@ -39,9 +39,18 @@ contact: david.fredman@uib.no
   and to apply what they have learned to their own research problems.
 </p>
 
-<p>
-<strong>Registration:</strong>
-The cost for the bootcamp is only 250 NOK. To register, please go to:  https://reg.app.uib.no/bootcamp
+<p><strong>Registration:</strong></p>
+<a href="https://reg.app.uib.no/bootcamp">Register here!</a> The cost for the bootcamp is only 250 NOK, and registration
+        includes the following:
+<ul>
+<li>Course materials</li>
+<li>Use of the training room during the 3 day course</li>
+</ul>
+
+Note that the registration fee does NOT include room and board!
+Lunch will be available for purchase in the same building,
+and if you are traveling from outside of Bergen, we will provide a list of recommended hotels.
+
 </p>
 
 <!-- This block displays the instructors' names if they are available. -->
