Added note that the bootcamp is full

--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@ contact: david.fredman@uib.no
 </p>
 
 <p><strong>Registration:</strong></p>
-<a href="https://reg.app.uib.no/bootcamp">Register here!</a> The cost for the bootcamp is only 250 NOK, and registration
-        includes the following:
+
+The bootcamp is full. You may <a href="https://reg.app.uib.no/bootcamp">sign up on the waiting list</a>,
+but note that we do not issue refunds of the course fee,  and expect cancellations to be rare!
+
+The cost for the bootcamp is only 250 NOK, and registration includes the following:
 <ul>
 <li>Course materials</li>
 <li>Use of the training room during the 3 day course</li>
