--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ and if you are traveling from outside of Bergen, we will provide a list of recom
   <tr> <td>Wednesday</td>  <td>09:00</td>  <td>Introduction to task automation with the Unix shell</td> </tr>
   <tr> <td></td>        <td></td>       <td>Coffee will be served at 10:30.</td> </tr>
   <tr> <td></td>        <td>12:00</td>  <td>Lunch break</td> </tr>
-  <tr> <td></td>        <td>13:00</td>  <td><a href="{{site.github.url}}/novice/git/00-intro.md">Version control with Git</a></td> </tr>
+  <tr> <td></td>        <td>13:00</td>  <td><a href="{{site.github.url}}/novice/git/00-intro.html">Version control with Git</a></td> </tr>
   <tr> <td></td>        <td></td>       <td>Coffee will be served at 14:30.</td> </tr>
   <tr> <td></td>        <td>16:00</td>  <td>Wrap-up</td> </tr>
   <tr> <td>Thursday</td> <td>09:00</td>  <td>Building programs with R</td> </tr>
