--- a/novice/r/07-knitr-R.html
+++ b/novice/r/07-knitr-R.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <meta http-equiv="x-ua-compatible" content="IE=9" >
 
-<title>Some best practices for using R and designing programs</title>
+<title>Taking notes and creating reports:</title>
 
 <style type="text/css">
 body, td {
@@ -179,64 +179,35 @@ hljs.initHighlightingOnLoad();
 </head>
 
 <body>
-<h1>Some best practices for using R and designing programs</h1>
+<h1>Taking notes and creating reports:</h1>
 
-<ol>
-<li>Start your code with a description of what it is:</li>
-</ol>
+<h2>Introducing Knitr</h2>
 
-<pre><code class="r"># This is code to replicate the analyses and figures from my 2014 Science
-# paper. Code developed by Sarah Supp, Tracy Teal, and Jon Borelli
+<p><code>Knitr</code> is an R package that makes your code neat, pretty, and shows your notes, code, and output simultaneously in an <code>html</code> document. You create these documents in <code>.Rmd</code> files. You can write in <code>LateX</code> or <code>md</code>. </p>
+
+<p>knitr extracts R code in the input document (.Rmd), evaluates it and writes the results to the output document (html). There are two types of R code: chunks (code as separate paragraphs) and inline R code.</p>
+
+<pre><code class="r">install.packages(&quot;knitr&quot;)
 </code></pre>
 
-<ol>
-<li>Run all of your import statments (<code>library</code> or <code>require</code>):</li>
-</ol>
-
-<pre><code class="r">library(ggplot2)
-library(reshape)
-library(vegan)
+<pre><code class="r">library(knitr)
 </code></pre>
 
-<ol>
-<li><p>Set your working directory. Avoid changing the working directory once a script is underway. Use <code>setwd()</code> first . Do it at the beginning of a R session. Better yet, start R inside a project folder.</p></li>
-<li><p>Use <code>#</code> or <code>#-</code> to set off sections of your code so you can easily scroll through it and find things.</p></li>
-<li><p>If you have only one or a few functions, put them at the top of your code, so they are among the first things run. If you written many functions, put them all in their own .R file, and <code>source</code> them. Source will run all of these functions so that you can use them as you need them.</p></li>
-</ol>
+<p>Restart RStudio. 
+Open a new <code>Rmd</code> file. </p>
 
-<pre><code class="r">source(&quot;my_genius_fxns.R&quot;)
+<p>In Rmd, anything between lines that start and end with triple quotes &ldquo; will be run as R code.</p>
+
+<pre><code class="r">summary(cars)
 </code></pre>
 
-<ol>
-<li><p>Use consistent style within your code. </p></li>
-<li><p>Keep your code modular. If a single function or loop gets too long, consider breaking it into smaller pieces.</p></li>
-<li><p>Don&#39;t repeat yourself. Automate! If you are repeating the same piece of code on multiple objects or files, use a loop or a function to do the same thing. The more you repeat yourself, the more likely you are to make a mistake.</p></li>
-<li><p>Manage all of your source files for a project in the same directory. Then use relative paths as necessary. For example, use</p></li>
-</ol>
-
-<pre><code class="r">dat &lt;- read.csv(file = &quot;/files/dataset-2013-01.csv&quot;, header = TRUE)
-</code></pre>
-
-<p>rather than:</p>
-
-<pre><code class="r">dat &lt;- read.csv(file = &quot;/Users/Karthik/Documents/sannic-project/files/dataset-2013-01.csv&quot;, 
-    header = TRUE)
-</code></pre>
+<h3>Challenge</h3>
 
 <ol>
-<li><p>Don&#39;t save a session history (the default option in R, when it asks if you want an <code>RData</code> file). Instead, start in a clean environment so that older objects don&#39;t contaminate your current environment. This can lead to unexpected results, especially if the code were to be run on someone else&#39;s machine.</p></li>
-<li><p>Where possible keep track of <code>sessionInfo()</code> somewhere in your project folder. Session information is invaluable since it captures all of the packages used in the current project. If a newer version of a project changes the way a function behaves, you can always go back and reinstall the version that worked (Note: At least on CRAN all older versions of packages are permanently archived).</p></li>
-<li><p>Collaborate. Grab a buddy and practice &ldquo;code review&rdquo;. We do it for methods and papers, why not code? Our code is a major scientific product and the result of a lot of hard work!</p></li>
-<li><p>Develop your code using version control and frequent updates!</p></li>
-</ol>
-
-<h3>Challenges</h3>
-
-<ol>
-<li>What other suggestions do you have?</li>
-<li>How could we restructure the code we worked on today, to make it easier to read? Discsuss with your neighbor.</li>
-<li>Make two new R scripts called inflammation.R and inflammation_fxns.R </li>
-<li>Copy and paste the code so that inflammation.R &ldquo;does stuff&rdquo; and inflammation<em>fxns.R holds all of your functions. __Hint</em>_: you will need to add <code>source</code> code to one of the files.</li>
+<li>Open an new .Rmd script and save it as inflammation_report.Rmd</li>
+<li>Copy and paste the code as embedded R chunks to read in the data and plot population size as a function of gdp (as previously).</li>
+<li>Add a few notes describing what the code does and what the main findings are.</li>
+<li><code>KNIT</code> and view the html</li>
 </ol>
 
 </body>
